--- a/apps/rubbish/src/index.html
+++ b/apps/rubbish/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Waterway Litter</title>
+  <title>Rubbish2</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Lato:300,700' />
+  <link rel="stylesheet" href='https://fonts.googleapis.com/icon?family=Material+Icons' />
+  <link rel="stylesheet" href='https://use.fontawesome.com/releases/v5.0.13/css/all.css' />
 </head>
 <body>
   <app-root></app-root>
